# metamsg

./: Cargo.toml  README.md
crates/adapter/: Cargo.toml
crates/adapter/src/: client.rs  lib.rs  message.rs
crates/adapter/src/channel/: adapter_conn.rs  mod.rs
crates/channel/: Cargo.toml
crates/channel/src/: channel.rs  codec.rs  lib.rs  table.rs
crates/connection/: Cargo.toml
crates/connection/src/: lib.rs  manager.rs
crates/connection/src/ble/: ble_server.rs  mod.rs
crates/connection/src/manager/: common_interface.rs  common_listener.rs  conn_manager.rs  connection_manager.rs
crates/connection/src/p2p/: mod.rs  p2p_server.rs
crates/connection/src/tcp/: mod.rs  tcp_server.rs
crates/discovery/: Cargo.toml
crates/discovery/examples/: coap-rs.rs  libcoap.rs  multicast_discovery.rs
crates/discovery/src/: config.rs  handshake.rs  lib.rs  manager.rs  manual.rs  multicast.rs  static.rs
crates/discovery/src/coap/: coap_callback.rs  mod.rs
crates/discovery/src/manager/: discovery_callback.rs  discovery_manager.rs
crates/discovery/src/multicast/: mod.rs  multicast_callback.rs  multicast_client.rs  multicast_discovery.rs
crates/metamsg-mqtt/: Cargo.toml
crates/network-device-link/: Cargo.toml
crates/network_device_link/: Cargo.toml
crates/routing/: Cargo.toml
crates/routing-link/: Cargo.toml
crates/routing-link/src/: device.rs  lib.rs  link.rs
crates/routing-link/src/device/: manager.rs
crates/routing/src/: device.rs  lib.rs  link.rs  message.rs  node.rs  routing.rs
crates/routing/src/device/: manager.rs
crates/routing/src/net_ledger/: mod.rs  remote_meta_ledger.rs
crates/routing/src/protocols/: mod.rs
crates/transmission/: Cargo.toml
crates/transmission/src/: lib.rs
crates/transmission/src/pubsub/: mod.rs  xpub.rs
crates/transmission/src/reqresp/: mod.rs
crates/transmission/src/reqresp/protocol/: request.rs
crates/transmission/src/rpc/: mod.rs
crates/transmission/src/rpc/protocol/: request.rs
crates/transport/src/: lib.rs
docs/: README.md  api.md  architecture.md  channel.md  connect.md  content.md  goal.md  pubsub.md  routing.md  summary.md  topic.md
docs/guide/: async-guide.md
docs/tasks/: 0001-设计兼容的Routing结构.md  9999-waitting-list.md
examples/: pub_sub.rs
metamsg-mqtt/: Cargo.toml
metamsg-mqtt/src/: main.rs  protocol.rs
src/: codec.rs  context.rs  engine.rs  lib.rs  metamsg.rs  session.rs
