[package]
name = "metamsg"
version = "0.0.0"
description = "Low level network with custom layer that build custom protocol."
documentation = "https://docs.rs/metamsg"
license = "Apache-2.0"
repository = "https://github.com/egccri/metamsg"
readme = "README.md"
authors = ["zifeng.1024@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/connection",
    "crates/discovery",
    "crates/network_device_link",
    "crates/authmanager",
    "crates/transmission",
    "crates/adapter",
    "crates/metamsg-mqtt",
]

[workspace.dependencies]
thiserror = "1.0.48"
