[package]
name = "metamsg"
version = "0.1.0"
description = "Low level network with custom layer that build custom protocol."
documentation = "https://docs.rs/metamsg"
license = "Apache-2.0"
repository = "https://github.com/egccri/metamsg"
readme = "README.md"
authors = ["zifeng.1024@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission = { path = "crates/transmission", version = "0.1.0" }
discovery = { path = "crates/discovery", version = "0.1.0" }
routing-link = { path = "crates/routing-link", version = "0.1.0" }

[workspace]
members = [
    "crates/connection",
    "crates/discovery",
    "crates/routing-link",
    "crates/authmanager",
    "crates/transmission",
    "crates/adapter",
    "crates/metamsg-mqtt",
]

[workspace.dependencies]
tokio = "1.32.0"
btleplug = "0.11.1"
libp2p = "0.52.3"
thiserror = "1.0.48"
tracing = "0.1.37"
async-trait = "0.1.73"
