[package]
name = "metamsg"
version = "0.1.0"
description = "Low level network with custom layer that build custom protocol."
documentation = "https://docs.rs/metamsg"
license = "Apache-2.0"
repository = "https://github.com/egccri/metamsg"
readme = "README.md"
authors = ["zifeng.1024@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connection = { path = "crates/connection", version = "0.1.0" }
channel = { path = "crates/channel", version = "0.1.0" }
transmission = { path = "crates/transmission", version = "0.1.0" }
discovery = { path = "crates/discovery", version = "0.1.0" }
routing = { path = "crates/routing", version = "0.1.0" }
tokio = { workspace = true, features = ["signal"] }
bytes = { workspace = true }

[workspace]
members = [
    "crates/connection",
    "crates/channel",
    "crates/routing",
    "crates/discovery",
    "crates/transmission",
    "crates/authmanager",
    "crates/adapter",
    "metamsg-mqtt"
]

#exclude = [
#    "metamsg-mqtt"
#]

[workspace.dependencies]
channel = { path = "crates/channel", version = "0.1.0" }
tokio = "1.32.0"
bytes = "1.5.0"
btleplug = "0.11.1"
libp2p = "0.52.3"
thiserror = "1.0.48"
tracing = "0.1.37"
async-trait = "0.1.73"
