[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connection = { path = "../connection",  version = "0.1.0" }
tower = { version = "0.4.13", features = ["buffer"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
