[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routing-link = { path = "../routing-link", version = "0.1.0" }
tokio = { workspace = true, features = ["full"] }
coap = "0.12"
coap-lite = "0.11.3"
