[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routing-link = { path = "../routing-link", version = "0.1.0" }
tokio = { workspace = true, features = ["full"] }
coap = "0.13"
coap-lite = "0.11.3"
#libcoap-rs = "0.2.2"
#url = "2.4.1"
socket2 = "0.5.4"
once_cell = "1.18.0"
thiserror = { workspace = true }
tracing = { workspace = true }
