[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connection = { path = "../connection", version = "0.1.0" }
thiserror = { workspace = true }
petgraph = "0.6.4"
libp2p-kad = "0.44.4"
